Refactor database helper methods to use query helpers